--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,14 @@
 body {
-  background: #093d79;
   color: #1a9fe2;
   padding-top: 71px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background: #093d79;
+  background-image: url("https://source.unsplash.com/1600x900/?landscape");
 }
 
 h1 {
@@ -43,6 +49,10 @@ li {
   border-radius: 10px;
   box-shadow: 2px 2px 10px #1479ac;
   padding: 16px 10px;
+  width: 100%;
+  max-width: 420px;
+  margin: 1em;
+  background: #eaeaea;
 }
 
 .search-field {
