--- a/src/style.css
+++ b/src/style.css
@@ -105,10 +105,6 @@ li {
   top: -16px;
 }
 
-.coded {
-  font-family: monospace;
-  text-align: center;
-}
 #conditions-icon {
   padding: 0px;
   height: 125px;
@@ -116,4 +112,13 @@ li {
 }
 .current-temp {
   margin: auto;
+}
+
+#open-source-link {
+  color: #f5f7f2;
+  font-size: 14px;
+  margin: 0 auto;
+  text-align: center;
+  padding: auto;
+  font-family: "Courier New", Courier, monospace;
 }
