--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -46,10 +46,16 @@ li {
   background: #000000d0;
   color: white;
   border-radius: 30px;
-  padding: 2em;
-  width: 100%;
-  max-width: 420px;
-  margin: 1em;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 600px;
+  max-width: 900px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .search-field {
@@ -127,6 +133,25 @@ li {
 }
 .current-temp {
   margin: auto;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #fff;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
 }
 
 #open-source-link {
